@@ -1,5 +1,10 @@
 2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/video/efi_gop.c: Fix over-80-chars line.
+	* grub-core/video/efi_uga.c: Likewise.
+
+2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Filter devaliases and never open same device twice.
 
 	* grub-core/disk/ieee1275/ofdisk.c (last_devpath): New variable.
